--- a/main.html
+++ b/main.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		/* Main Container */
+		#testimonials {
+			background-color: #f5f5f5;
+			padding: 20px;
+		}
+
+		/* Individual Testimonial Box */
+		.testimonial {
+			background-color: #fff;
+			border: 1px solid #ccc;
+			padding: 15px;
+			margin-bottom: 15px;
+		}
+
+		/* Testimonial Text */
+		.testimonial p {
+			margin: 0;
+			font-size: 16px;
+			color: #333;
+		}
+
+		/* Author Name */
+		.author {
+			text-align: right;
+			font-style: italic;
+			margin-top: 10px;
+			color: #555;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+	<div id="testimonials">
+		<div class="testimonial">
+			<p>"This platform really helped me improve my coding skills!"</p>
+			<div class="author">- Subishga V.S</div>
+		</div>
+
+		<div class="testimonial">
+			<p>"Excellent learning experience with hands-on practice and projects."</p>
+			<div class="author">- Alex Johnson</div>
+		</div>
+
+		<div class="testimonial">
+			<p>"The guidance and challenges boosted my confidence in web development."</p>
+			<div class="author">- Priya Sharma</div>
+		</div>
+	</div>
+
+	<script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
