--- a/main.html
+++ b/main.html
@@ -36,7 +36,8 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<!-- Added an h1 heading as required -->
+	<h1>Testimonials</h1>
 
 	<div id="testimonials">
 		<div class="testimonial">
