--- a/main.html
+++ b/main.html
@@ -18,41 +18,27 @@
 			margin-bottom: 15px;
 		}
 
-		/* Testimonial Text */
-		.testimonial p {
-			margin: 0;
-			font-size: 16px;
-			color: #333;
-		}
-
 		/* Author Name */
 		.author {
 			text-align: right;
 			font-style: italic;
-			margin-top: 10px;
 			color: #555;
 		}
 	</style>
 </head>
 
 <body>
-	<!-- Added an h1 heading as required -->
 	<h1>Testimonials</h1>
 
 	<div id="testimonials">
 		<div class="testimonial">
 			<p>"This platform really helped me improve my coding skills!"</p>
-			<div class="author">- Subishga V.S</div>
+			<p class="author">- Subishga V.S</p>
 		</div>
 
 		<div class="testimonial">
 			<p>"Excellent learning experience with hands-on practice and projects."</p>
-			<div class="author">- Alex Johnson</div>
-		</div>
-
-		<div class="testimonial">
-			<p>"The guidance and challenges boosted my confidence in web development."</p>
-			<div class="author">- Priya Sharma</div>
+			<p class="author">- Alex Johnson</p>
 		</div>
 	</div>
 
